--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ url-pretty: "blog.drum.dog"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: ""
+disqus: "blog-drum-dog"
 
 # Fill in your Google Analytics ID to track your website using GA
 google_analytics: "UA-76314106-1"
