--- a/_config.yml
+++ b/_config.yml
@@ -221,5 +221,8 @@ prose:
 gems:
   - jekyll-paginate
 
+plugins:
+  - jekyll-sitemap
+  
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
