--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: The DRUM.DOG Blog!
 
 # List of links in the navigation bar
 navbar-links:
-  About: "aboutme"
+  About: "about"
   Sticks: "https://drum.dog"
 
 # Image to show in the navigation bar - image must be a square (width = height)
