--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://blog.drum.dog"
+url: "https://blog.drum.dog"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -56,19 +56,19 @@ author:
   facebook: drumdoguk  # eg. daattali
   github: drumdog    # eg. daattali
   twitter: drumdoguk   # eg. daattali
-  reddit: yourname    # eg. daattali
-  google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
-  linkedin: yourname  # eg. daattali
-  xing: yourname      # eg. daattali
-  stackoverflow: yourlink  # eg. "3943160/daattali"
-  snapchat: yourname  # eg. daattali
-  instagram: yourname # eg. daattali
-  youtube: yourlink   # eg. user/daattali or channel/daattali
-  spotify: yourname   # eg. daattali
-  telephone: yourphone   # eg. +14159998888
-  steam: yourname     # eg. daattali
-  twitch: yourname    # eg. daattali
-  yelp: yourname      # eg. daattali
+  #reddit: yourname    # eg. daattali
+  #google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
+  #linkedin: yourname  # eg. daattali
+  #xing: yourname      # eg. daattali
+  #stackoverflow: yourlink  # eg. "3943160/daattali"
+  #snapchat: yourname  # eg. daattali
+  #instagram: yourname # eg. daattali
+  youtube: channel/drumdog   # eg. user/daattali or channel/daattali
+  #spotify: yourname   # eg. daattali
+  #telephone: yourphone   # eg. +14159998888
+  #steam: yourname     # eg. daattali
+  #twitch: yourname    # eg. daattali
+  #yelp: yourname      # eg. daattali
 
 # Select which links to show in the footer
 footer-links-active:
@@ -84,7 +84,7 @@ footer-links-active:
   stackoverflow: false
   snapchat: false
   instagram: false
-  youtube: false
+  youtube: true
   spotify: false
   telephone: false
   steam: false
@@ -95,6 +95,7 @@ footer-links-active:
 share-links-active:
   twitter: true
   facebook: true
+  youtube: true
   google: false
   linkedin: false
 
@@ -222,7 +223,7 @@ gems:
   - jekyll-paginate
   - jekyll-sitemap
   
-plugins:
+plugins_dir:
   - jekyll-sitemap
   
 # Beautiful Jekyll / Dean Attali
