--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ author:
   #stackoverflow: yourlink  # eg. "3943160/daattali"
   #snapchat: yourname  # eg. daattali
   #instagram: yourname # eg. daattali
-  youtube: channel/drumdog   # eg. user/daattali or channel/daattali
+  youtube: drumdog   # eg. user/daattali or channel/daattali
   #spotify: yourname   # eg. daattali
   #telephone: yourphone   # eg. +14159998888
   #steam: yourname     # eg. daattali
