--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: The DRUM.DOG Blog!
 # List of links in the navigation bar
 navbar-links:
   About: "about"
-  Sticks: "https://drum.dog"
+  Lessons: "https://drum.dog"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
